<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bluetoothbtn"
        android:layout_width="387dp"
        android:layout_height="49dp"
        android:text="Bluetooth"
        app:layout_constraintBottom_toTopOf="@+id/Data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/requestsbtn"
        android:layout_width="387dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:text="Requests"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/alarmbutton"
        android:layout_width="387dp"
        android:layout_height="49dp"
        android:text="Alarm"
        app:layout_constraintBottom_toTopOf="@+id/bluetoothbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cambutton"
        android:layout_width="387dp"
        android:layout_height="49dp"
        android:text="Cameras"
        app:layout_constraintBottom_toTopOf="@+id/alarmbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lockbutton"
        android:layout_width="387dp"
        android:layout_height="49dp"
        android:text="Locks"
        app:layout_constraintBottom_toTopOf="@+id/cambutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Data"
        android:layout_width="387dp"
        android:layout_height="49dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="8dp"
        android:text="Data"
        app:layout_constraintBottom_toTopOf="@+id/requestsbtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/facebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add a face"
        app:layout_constraintBottom_toTopOf="@+id/lockbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

</androidx.constraintlayout.widget.ConstraintLayout>